# Aegis-Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/helm/aegis/: Chart.yaml  values.yaml
deploy/helm/aegis/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: aegis.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: datasource.yml
docs/: api.md  architecture.md  runbook.md
docs/adr/: 0001-async-fastapi-architecture.md  0002-self-healing-strategy.md  0003-arq-vs-celery-worker-queue.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py
scripts/: seed.py  wait_for_services.py
src/aegis/: __init__.py  cli.py  main.py
src/aegis/api/: deps.py  errors.py  router.py
src/aegis/api/v1/: auth.py  healing.py  health.py  runs.py  suites.py  ws.py
src/aegis/cache/: redis.py
src/aegis/core/: config.py  exceptions.py  idempotency.py  logging.py  metrics.py  observability.py  pagination.py  resilience.py  security.py
src/aegis/db/: base.py  models.py  session.py
src/aegis/domain/: enums.py  schemas.py
src/aegis/healing/: __init__.py  dom.py  engine.py  llm.py  strategies.py
src/aegis/repositories/: base.py  healing.py  runs.py  suites.py  users.py
src/aegis/services/: auth_service.py  healing_service.py  run_service.py  suite_service.py
src/aegis/workers/: arq_worker.py  dispatch.py  executor.py  tasks.py
tests/: conftest.py  factories.py
tests/integration/: test_auth_api.py  test_authz.py  test_health_api.py  test_runs_api.py  test_suites_api.py
tests/unit/: test_dom.py  test_healing_engine.py  test_healing_strategies.py  test_pagination.py  test_resilience.py  test_security.py
