[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis-platform"
version = "1.0.0"
description = "Aegis — a distributed, AI-powered self-healing test-orchestration platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rohit Saxena", email = "rohit.saxena@cognizant.com" }]
keywords = ["testing", "self-healing", "orchestration", "fastapi", "platform", "ai", "observability"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "arq>=0.26",
    "anthropic>=0.40",
    "structlog>=24.1",
    "pyjwt>=2.8",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "typer>=0.12",
    "prometheus-client>=0.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "factory-boy>=3.3",
    "asgi-lifespan>=2.1",
]
dev = [
    "aegis-platform[test,otel]",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "types-passlib",
]

[project.scripts]
aegis = "aegis.cli:app"

[project.urls]
Homepage = "https://github.com/rohit-saxena/aegis-platform"
Documentation = "https://github.com/rohit-saxena/aegis-platform/tree/main/docs"
Repository = "https://github.com/rohit-saxena/aegis-platform"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF", "ASYNC", "S"]
# S105/S106 are bandit's hardcoded-password heuristic; they false-positive on
# token-type literals ("access"/"bearer") and the named default-secret constant
# (which is guarded against in production by Settings._enforce_production_safety).
ignore = ["S101", "B008", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107", "S311", "SIM105", "ASYNC109"]
"scripts/**" = ["ASYNC109"]
"migrations/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["aegis"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
# Several typed-ish third-party calls (SQLAlchemy `scalar`, passlib, structlog,
# redis) are annotated to return Any; flagging our typed wrappers around them is
# noise, so we relax only this one strict sub-check.
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_decorators = false
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=aegis --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: fast, isolated tests with no I/O",
    "integration: tests exercising the API/db stack",
]

[tool.coverage.run]
branch = true
source = ["src/aegis"]
omit = ["*/workers/arq_worker.py", "src/aegis/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
